--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,12 @@ jobs:
         run: |
           IMAGE=$(echo "$IMAGE_SHA" | tr '[:upper:]' '[:lower:]')
           LATEST=$(echo "$IMAGE_LATEST" | tr '[:upper:]' '[:lower:]')
-          docker build -t "$IMAGE" -t "$LATEST" .
+          if [ -z "${{ secrets.FE_VITE_API_URL }}" ]; then
+            echo "FE_VITE_API_URL secret is not set. Set it in GitHub repo secrets to configure API URL."
+          fi
+          docker build \
+            --build-arg VITE_API_URL='${{ secrets.FE_VITE_API_URL }}' \
+            -t "$IMAGE" -t "$LATEST" .
           echo "image=$IMAGE" >> "$GITHUB_OUTPUT"
           echo "latest=$LATEST" >> "$GITHUB_OUTPUT"
 
