Initial migration v4 support auto updates on mobile sign apk 2

--- a/.github/workflows/mobile-release.yml
+++ b/.github/workflows/mobile-release.yml
@@ -88,10 +88,17 @@ jobs:
 
       - name: Setup release signing
         if: steps.check.outputs.changed == 'true'
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD || 'lechefacil123' }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD || 'lechefacil123' }}
         run: |
+          KEYSTORE_PASSWORD="${{ secrets.KEYSTORE_PASSWORD }}"
+          KEY_PASSWORD="${{ secrets.KEY_PASSWORD }}"
+
+          # Use default passwords if secrets not set
+          if [ -z "$KEYSTORE_PASSWORD" ]; then
+            KEYSTORE_PASSWORD="android"
+            KEY_PASSWORD="android"
+            echo "⚠️  Using default passwords (not recommended for production)"
+          fi
+
           # Generate keystore
           echo "🔐 Generating release keystore..."
           keytool -genkey -v \
@@ -104,20 +111,19 @@ jobs:
             -keypass "${KEY_PASSWORD}" \
             -dname "CN=LecheFacil, OU=Mobile, O=LecheFacil, L=City, S=State, C=US"
 
-          # Create key.properties for Gradle
-          cat > android/key.properties <<EOF
-          storePassword=${KEYSTORE_PASSWORD}
-          keyPassword=${KEY_PASSWORD}
-          keyAlias=lechefacil
-          storeFile=release.keystore
-          EOF
+          echo "✅ Keystore generated at android/app/release.keystore"
 
       - name: Build signed APK
         if: steps.check.outputs.changed == 'true'
+        env:
+          RELEASE_KEYSTORE_FILE: "release.keystore"
+          RELEASE_KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD || 'android' }}
+          RELEASE_KEY_ALIAS: "lechefacil"
+          RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD || 'android' }}
         run: |
           cd android
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew assembleRelease --stacktrace
 
       - name: List APK outputs (debug)
         if: steps.check.outputs.changed == 'true'
