--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,12 +1,5 @@
 apply plugin: 'com.android.application'
 
-// Load keystore properties for release signing
-def keystorePropertiesFile = rootProject.file("key.properties")
-def keystoreProperties = new Properties()
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
-
 android {
     namespace "com.lechefacil.app"
     compileSdk rootProject.ext.compileSdkVersion
@@ -26,11 +19,13 @@ android {
 
     signingConfigs {
         release {
-            if (keystorePropertiesFile.exists()) {
-                keyAlias keystoreProperties['keyAlias']
-                keyPassword keystoreProperties['keyPassword']
-                storeFile file(keystoreProperties['storeFile'])
-                storePassword keystoreProperties['storePassword']
+            // Use environment variables for CI/CD or local keystore file
+            def keystoreFile = System.getenv("RELEASE_KEYSTORE_FILE") ?: file("release.keystore").exists() ? file("release.keystore") : null
+            if (keystoreFile != null) {
+                storeFile file(keystoreFile)
+                storePassword System.getenv("RELEASE_KEYSTORE_PASSWORD") ?: "android"
+                keyAlias System.getenv("RELEASE_KEY_ALIAS") ?: "lechefacil"
+                keyPassword System.getenv("RELEASE_KEY_PASSWORD") ?: "android"
             }
         }
     }
@@ -39,7 +34,8 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            if (keystorePropertiesFile.exists()) {
+            // Only sign if keystore exists
+            if (signingConfigs.release.storeFile != null) {
                 signingConfig signingConfigs.release
             }
         }
